edited css slightly

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     padding: 10px;
 }
 
-.footer-icon {
+.button-icon {
     text-align: center;
     font-size: 1.7em;
     display: block;
