--- a/style.css
+++ b/style.css
@@ -5,36 +5,8 @@
 }
 
 body {
-    background-color: black;
+    background-color: rgb(39, 39, 39);
     font-family: "Gill Sans", sans-serif;
-}
-
-.buttons {
-    text-align: center;
-}
-
-.connect, .sustainability, .emergency{
-    font-size: 20px;
-    padding: 5px;
-    height: 200px;
-    width: 200px;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    margin-top: 50px;
-    margin-left: 50x;
-}
-
-.connect {
-    background-color: blue;
-}
-
-.sustainability{
-    background-color: green;
-}
-
-.emergency{
-    background-color: red;
 }
 
 .footer-container {
@@ -62,4 +34,43 @@ body {
 .footer-button:hover {
     cursor: pointer;
     background-color:  rgb(102 146 68);
+}
+
+/* StartPage */
+img {    
+    padding-top: 2%;
+    display: block;
+    margin: auto;
+}
+
+.connect, .sustainability, .emergency{
+    font-size: 20px;
+    height: 200px;
+    width: 200px;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    display: block;
+}
+
+.connect {
+    background: rgb(0,0,249);
+    background: radial-gradient(circle, rgba(0,0,249,1) 21%, rgba(2,0,36,1) 100%);
+    margin-left: 40%;
+    margin-top: 2%
+}
+
+.sustainability{
+    background: rgb(29,189,39);
+    background: radial-gradient(circle, rgba(29,189,39,1) 0%, rgba(8,34,11,1) 100%);
+    margin-left: auto;
+    margin-right: 40%;
+}
+
+.emergency{
+    background: rgb(246,22,22);
+    background: radial-gradient(circle, rgba(246,22,22,1) 0%, rgba(34,8,8,1) 100%);
+    margin-left: 40%;
+    
 }
