--- a/style.css
+++ b/style.css
@@ -57,20 +57,25 @@ img {
 .connect {
     background: rgb(0,0,249);
     background: radial-gradient(circle, rgba(0,0,249,1) 21%, rgba(2,0,36,1) 100%);
-    margin-left: 40%;
+    margin-left: 33%;
     margin-top: 2%
 }
 
 .sustainability{
     background: rgb(29,189,39);
     background: radial-gradient(circle, rgba(29,189,39,1) 0%, rgba(8,34,11,1) 100%);
-    margin-left: auto;
-    margin-right: 40%;
+    margin-left: 50%;
 }
 
 .emergency{
     background: rgb(246,22,22);
     background: radial-gradient(circle, rgba(246,22,22,1) 0%, rgba(34,8,8,1) 100%);
-    margin-left: 40%;
-    
+    margin-left: 33%;
+}
+
+@media screen and (max-width: 400px) {
+    .connect,
+    .emergency{
+        margin-left:15%;
+    }
 }
