--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+* {
+    box-sizing : border-box;
+    margin: 0px;
+    padding: 0px;
+}
 body {
     background-color: black;
     font-family: "Gill Sans", sans-serif;
@@ -30,3 +36,54 @@ body {
 .emergency{
     background-color: red;
 }
+
+.container-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 100px;
+}
+
+.container-items img {
+    width:400px;
+    height:300px;
+    /*padding: 0px 20px;*/
+    /*border: 1px solid black;*/
+    
+}
+
+.container-items {
+    /*padding: 20px 0;*/
+    /*padding-bottom: 0;*/
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    margin-bottom: 100px;
+}
+
+.interest-button {
+    padding: 10px;
+    text-align: center;
+    cursor:pointer;
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    margin-left: 20px;
+    display: inline-block;
+}
+
+.product-text {
+    padding: 5px 20px;
+    /*text-align: center;*/
+    border: 1px solid black;
+    border-top: 0;
+}
+
+.image-container{
+    padding: 20px;
+    border: 1px solid black;
+    width: 440px;
+    height: auto;
+}
+
