--- a/style.css
+++ b/style.css
@@ -224,6 +224,7 @@ img {
     .sustainabilty-container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-content: center;
     height: 250px;
     width: 250px;
