--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ h1 {
     text-align: center;
 }
 
+.logo-header h1 {
+    font-family: lobster;
+}
+
 .information-header {
     margin-top: 20px;
     color: rgb(116,209,76);
@@ -298,19 +302,28 @@ img {
     /*background-color: rgb(255, 15, 15);*/
     background-color: #be2819;
     margin-bottom: 20px;
+    color: white;
+    text-align: left;
+    padding: 7px;
 }
 
 .news-container {
-    width: 50%;
+    width: 60%;
     height: auto;
     margin: auto;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding-top: 20px;
+    /*border: 1px solid black;
+    border-radius: 5px;*/
+    padding-bottom: 150px;
+    /*padding-top: 20px;*/
 }
 
 .news-paragraph {
-    padding-bottom: 20px;
+    padding-bottom: 25px;
+    padding-left: 10px
+}
+
+.info-style {
+    text-align: center;
 }
    
 
