--- a/style.css
+++ b/style.css
@@ -288,3 +288,34 @@ img {
         margin-left:15%;
     }
 }
+
+.news-content {
+    color: black;
+    background-color: white;
+}
+
+.news-paragraph {
+    padding-bottom: 25px;
+    padding-left: 10px;
+    background-color: white;
+}
+
+.news-header {
+    background-color: rgb(190, 40, 25);
+    margin-bottom: 20px;
+    color: white;
+    text-align: left;
+    padding: 7px;
+}
+
+.news-container {
+    width: 60%;
+    height: auto;
+    padding-bottom: 150px;
+    margin: auto;
+    
+}
+
+.info-style {
+    text-align: center;
+}
