--- a/style.css
+++ b/style.css
@@ -693,5 +693,53 @@ a:visited {
 
 /* Sign out */
 
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 60px;
+    height: 60px    ;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  .loader-container{
+      height: 300px;
+      width: 300px;
+    display:flex;
+    flex-direction: column;
+    border:solid white;
+      
+  }
+  .loader-container p{
+      text-align: center;
+      color: white;
+      margin-bottom: 30px;
+  }
+
+  .loader{
+      align-self: center;
+    
+  }
+
+  .loader-wrapper{
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%; 
+      height: 800px;
+     }
+
 
 
