--- a/style.css
+++ b/style.css
@@ -742,4 +742,33 @@ a:visited {
      }
 
 
+#bankid-body{
+    background-color: none !important;
+}
 
+#bankid-img {    
+    padding-top: 5%;
+    display: block;
+    margin: auto;
+    margin-bottom: 4%;
+    max-width: 100%;
+}
+
+#qr-code-img{
+    max-width: 50px;
+    display: block;
+    margin: auto;
+}
+
+#qr-code {
+color: rgb(0, 110, 129);
+}
+.bank-id {
+    text-align: center;
+
+}
+
+.bank-id-p {
+    text-align: center;
+    margin-bottom: 5%;
+}
