--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0px;
 }
 body {
-    background-color: black;
+    background-color: rgb(39, 39, 39);
 }
 .opt-container {
     width: 18%;
