--- a/style.css
+++ b/style.css
@@ -3,9 +3,16 @@
     box-sizing : border-box;
     margin: 0px;
     padding: 0px;
+    font-family: 'Roboto', sans-serif;
 }
 body {
     background-color: rgb(39, 39, 39);
+}
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'lobster';
 }
 .opt-container {
     width: 18%;
