--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     border: 1px solid black;
     background-color: white;
     color: black;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
 }
 
 .interest-button {
@@ -118,7 +118,7 @@ h1 {
 
 .information-header {
     margin-top: 20px;
-    color: rgb(116,209,76);
+    color:white;
     font-size: 20px;
     text-align: center;
 }
