Style h1 and hamburgar news

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1
 }
 #input-items {
     display: none;
-    background-color: lightgray;
+    background-color: whitesmoke;
 }
 .plus-container {
     height: 15;
