--- a/style.css
+++ b/style.css
@@ -809,4 +809,14 @@ color: rgb(0, 110, 129);
     padding: 0 2rem;
   }
 
+  /*Map config*/
+
+  .map_container {
+    background-color: GAINSBORO;
+    border : 2px solid black;
+    margin: auto;
+    height: 200px;
+    width: 300px;
+}
+
   
